--- a/.github/workflows/duplotest.yml
+++ b/.github/workflows/duplotest.yml
@@ -74,4 +74,4 @@ jobs:
       with:
         name: frontend-deployment
         image: ${{ inputs.image }}
-        type: service
+        type: frontend-deployment
