--- a/.github/workflows/duplotest.yml
+++ b/.github/workflows/duplotest.yml
@@ -11,7 +11,10 @@ on:
       environment:
         description: The environment to deploy to
         type: environment
-        default: dev
+        options:
+          - develop
+          - qa
+          - gcp
 
       # image:
       #   description: The full image URI
