--- a/.github/workflows/duplotest.yml
+++ b/.github/workflows/duplotest.yml
@@ -3,9 +3,10 @@ on:
   workflow_dispatch:
     inputs:
       environment:
+        description: The environment to deploy to
         type: environment
-        description: Select the environment to deploy. For dev environment select develop, to deploy in production select master, to deploy in qa environment select qa
         default: demo
+        required: true
 #         - master
 
   workflow_call:
