--- a/.github/workflows/duplotest.yml
+++ b/.github/workflows/duplotest.yml
@@ -1,44 +1,31 @@
 name: Branch-Deployment
+
 on:
   workflow_dispatch:
     inputs:
       environment:
-        description: The environment to deploy to
-        type: environment
-        default: demo
+        type: choice
+        description: Select the environment to deploy. For dev environment select develop, to deploy in production select master, to deploy in qa environment select qa
+        options:
+          - demo
         required: true
-#         - master
 
-  workflow_call:
-    # outputs:
-      # image:
-      #   description: The URI of the image
-      #   value: ${{ jobs.build_image.outputs.image }}
-    secrets:
-      DUPLO_TOKEN:
-        description: The token to use for DuploCloud API calls
-        required: true
-env:
-  DUPLO_HOST: ${{ vars.DUPLO_HOST }}
-  DUPLO_TOKEN: ${{ secrets.DUPLO_TOKEN }}
-  DUPLO_TENANT: demo
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    environment: ${{ github.event.inputs.environment }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      # Configures DuploCloud and the host cloud, for example, AWS
+
+      # Set up environment-specific secrets
       - name: Duplo Setup
         uses: duplocloud/actions/setup@v0.0.5
         with:
-          account-id: ${{ vars.CLOUD_ACCOUNT }}
-          credentials: ${{ vars.CLOUD_CREDENTIALS }}
+          account-id: ${{ secrets.CLOUD_ACCOUNT }}
+          credentials: ${{ secrets.CLOUD_CREDENTIALS }}
 
-
-
-        
- 
-
-
-    
+      - name: Debug Selected Environment
+        run: echo "Selected Environment: ${{ github.event.inputs.environment }}"
