--- a/.github/workflows/duplotest.yml
+++ b/.github/workflows/duplotest.yml
@@ -1,44 +1,42 @@
-name: Branch-Deployment
+name: Publish and Update Service
+
 on:
+  # Triggers the workflow on push to matching branches
+  push:
+    branches:
+      - main
+  # Allows users to trigger the workflow manually from the GitHub UI
   workflow_dispatch:
     inputs:
       environment:
-        type: choice
-        description: Select the environment to deploy. For dev environment select develop, to deploy in production select master, to deploy in qa environment select qa
-        options:
-          - demo
-#         - master
-
-  workflow_call:
-    # outputs:
-      # image:
-      #   description: The URI of the image
-      #   value: ${{ jobs.build_image.outputs.image }}
-    secrets:
-      DUPLO_TOKEN:
-        description: The token to use for DuploCloud API calls
+        description: The environment to deploy to
+        type: environment
+        default: dev
         required: true
-env:
-  DUPLO_HOST: ${{ vars.DUPLO_HOST }}
-  DUPLO_TOKEN: ${{ secrets.DUPLO_TOKEN }}
-  DUPLO_TENANT: demo
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    
+    # Specify the environment to pull secrets and variables from
+    environment: demo
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
       # Configures DuploCloud and the host cloud, for example, AWS
       - name: Duplo Setup
         uses: duplocloud/actions/setup@v0.0.5
         with:
-          account-id: ${{ vars.CLOUD_ACCOUNT }}
-          credentials: ${{ vars.CLOUD_CREDENTIALS }}
+          account-id: ${{ secrets.CLOUD_ACCOUNT }}  # This is pulled from the 'demo' environment
+          credentials: ${{ secrets.CLOUD_CREDENTIALS }}  # From the 'demo' environment
 
+      - name: Debug Selected Environment
+        run: echo "Environment: demo is selected"
 
-
-        
- 
-
-
-    
+      # Optionally, if you need to use environment variables as well, set them like this:
+      env:
+        DUPLO_HOST: ${{ vars.DUPLO_HOST }}  # This comes from the 'demo' environment
+        DUPLO_TOKEN: ${{ secrets.DUPLO_TOKEN }}  # This secret comes from the 'demo' environment
+        DUPLO_TENANT: demo
