--- a/.github/workflows/duplotest.yml
+++ b/.github/workflows/duplotest.yml
@@ -8,11 +8,7 @@ on:
   # Allows users to trigger the workflow manually from the GitHub UI
   workflow_dispatch:
     inputs:
-      environment:
-        description: The environment to deploy to
-        type: environment
-        default: demo
-        required: true
+      environment: demo
       # image:
       #   description: The full image URI
       #   type: string
